@@ -7,8 +7,7 @@ function create(id, x, y, width, height, filename)
 end
 
 function _draw(self, ctx)
-        ctx.color(255,255,255)
-        ctx.drawImage('mod_assets/images/example-image.dds', self.x, self.y)
+    ctx.drawImage(self.image, self.x, self.y)
 	gw_util.resetColor(ctx)
 end
 ]])
